auth check in all methods, jwt cookie
