# docs/swagger.yaml
@@ -1,5 +1,23 @@
+basePath: /api
 definitions:
-  dto.AuthResponse:
+  rip_internal_app_ds.Route:
+    properties:
+      delay:
+        type: integer
+      description:
+        type: string
+      distance:
+        type: integer
+      imageURL:
+        type: string
+      routeID:
+        type: integer
+      status:
+        type: string
+      title:
+        type: string
+    type: object
+  rip_internal_app_dto.AuthResponse:
     properties:
       access_token:
         type: string
@@ -12,26 +30,48 @@ definitions:
       token_type:
         type: string
       user:
-        $ref: '#/definitions/dto.UserResponse'
+        $ref: '#/definitions/rip_internal_app_dto.UserResponse'
     type: object
-  dto.ErrorResponse:
+  rip_internal_app_dto.ErrorResponse:
     properties:
       error:
         type: string
     type: object
-  dto.MessageResponse:
+  rip_internal_app_dto.MessageResponse:
     properties:
       message:
         type: string
     type: object
-  dto.RefreshTokenRequest:
+  rip_internal_app_dto.RefreshTokenRequest:
     properties:
       refresh_token:
         type: string
     required:
     - refresh_token
     type: object
-  dto.SignInRequest:
+  rip_internal_app_dto.RouteInfo:
+    properties:
+      description:
+        type: string
+      distance:
+        type: integer
+      image_url:
+        type: string
+      route_id:
+        type: integer
+      status:
+        type: string
+      title:
+        type: string
+    type: object
+  rip_internal_app_dto.RouteSpeedRequestInfo:
+    properties:
+      arrival_date:
+        type: string
+      ship_speed:
+        type: integer
+    type: object
+  rip_internal_app_dto.SignInRequest:
     properties:
       login:
         type: string
@@ -41,10 +81,8 @@ definitions:
     - login
     - password
     type: object
-  dto.SignUpRequest:
+  rip_internal_app_dto.SignUpRequest:
     properties:
-      is_moderator:
-        type: boolean
       login:
         type: string
       password:
@@ -54,14 +92,53 @@ definitions:
     - login
     - password
     type: object
-  dto.UpdateUserRequest:
+  rip_internal_app_dto.SpeedRequest:
+    properties:
+      completion_date:
+        type: string
+      creation_date:
+        type: string
+      creator_login:
+        type: string
+      departure_date:
+        type: string
+      formation_date:
+        type: string
+      id:
+        type: integer
+      moderator_login:
+        type: string
+      status:
+        type: string
+    type: object
+  rip_internal_app_dto.SpeedRequestDetailedResponse:
+    properties:
+      result:
+        type: integer
+      route_req:
+        items:
+          $ref: '#/definitions/rip_internal_app_dto.RouteSpeedRequestInfo'
+        type: array
+      routes:
+        items:
+          $ref: '#/definitions/rip_internal_app_dto.RouteInfo'
+        type: array
+      speed_request:
+        $ref: '#/definitions/rip_internal_app_dto.SpeedRequest'
+    type: object
+  rip_internal_app_dto.UpdateSpeedRequest:
+    properties:
+      departure_date:
+        type: string
+    type: object
+  rip_internal_app_dto.UpdateUserRequest:
     properties:
       login:
         type: string
       password:
         type: string
     type: object
-  dto.UserResponse:
+  rip_internal_app_dto.UserResponse:
     properties:
       is_moderator:
         type: boolean
@@ -70,8 +147,12 @@ definitions:
       user_id:
         type: integer
     type: object
+host: localhost:8080
 info:
   contact: {}
+  description: Route Information Platform API
+  title: RIP API
+  version: "1.0"
 paths:
   /auth/refresh:
     post:
@@ -84,22 +165,22 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/dto.RefreshTokenRequest'
+          $ref: '#/definitions/rip_internal_app_dto.RefreshTokenRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.AuthResponse'
+            $ref: '#/definitions/rip_internal_app_dto.AuthResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
       summary: Refresh JWT tokens
       tags:
       - auth
@@ -114,22 +195,22 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/dto.SignInRequest'
+          $ref: '#/definitions/rip_internal_app_dto.SignInRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.AuthResponse'
+            $ref: '#/definitions/rip_internal_app_dto.AuthResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
       summary: User authentication
       tags:
       - auth
@@ -144,15 +225,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.MessageResponse'
+            $ref: '#/definitions/rip_internal_app_dto.MessageResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
       security:
       - BearerAuth: []
       summary: User logout
@@ -169,25 +250,353 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/dto.SignUpRequest'
+          $ref: '#/definitions/rip_internal_app_dto.SignUpRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/dto.AuthResponse'
+            $ref: '#/definitions/rip_internal_app_dto.AuthResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
       summary: User registration
       tags:
       - auth
+  /draft/addroute/{route_id}:
+    post:
+      description: Add route to draft. Create new darft if darft not existing. For
+        authentificated users (client, moderator)
+      parameters:
+      - description: Route ID
+        in: path
+        name: route_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Add route to draft
+      tags:
+      - routes
+  /routes:
+    get:
+      description: Get all routes list with optional filters
+      parameters:
+      - description: Minimum distance filter
+        in: query
+        name: min_distance
+        type: integer
+      - description: Maximum distance filter
+        in: query
+        name: max_distance
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: routes
+          schema:
+            items:
+              $ref: '#/definitions/rip_internal_app_ds.Route'
+            type: array
+      summary: Get all routes
+      tags:
+      - routes
+    post:
+      consumes:
+      - application/json
+      description: Create new route. Only for moderator
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: route
+          schema:
+            $ref: '#/definitions/rip_internal_app_ds.Route'
+      security:
+      - BearerAuth: []
+      summary: Create new route
+      tags:
+      - routes
+  /routes/{route_id}:
+    delete:
+      description: Delete existing route. Only for moderator
+      parameters:
+      - description: Route ID
+        in: path
+        name: route_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Маршрут успешно удален
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Delete existing route
+      tags:
+      - routes
+    get:
+      description: Get route information by ID
+      parameters:
+      - description: Route ID
+        in: path
+        name: route_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: route
+          schema:
+            $ref: '#/definitions/rip_internal_app_ds.Route'
+      summary: Get route by ID
+      tags:
+      - routes
+    put:
+      consumes:
+      - application/json
+      description: Update existing route. Only for moderator
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: route
+          schema:
+            $ref: '#/definitions/rip_internal_app_ds.Route'
+      security:
+      - BearerAuth: []
+      summary: Update existing route
+      tags:
+      - routes
+  /routes/{route_id}/image:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Upload route image. Add new image if route doesn`t have one or
+        change image. Only for moderator
+      parameters:
+      - description: Route ID
+        in: path
+        name: route_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Изображение успешно загружено и обновлено
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Upload route image
+      tags:
+      - routes
+  /routespeedrequests:
+    delete:
+      consumes:
+      - application/json
+      description: Remove route from speed request. For authentificated users only.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Remove route speed request
+      tags:
+      - routespeedrequests
+    put:
+      consumes:
+      - application/json
+      description: Upadet field arrival date in route speed request. For authentificated
+        users only.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update route speed request
+      tags:
+      - routespeedrequests
+  /speedrequests:
+    get:
+      description: Get speed requests list. For authentificated users only.
+      parameters:
+      - description: Date From
+        format: date
+        in: query
+        name: date_from
+        type: string
+      - description: Date To
+        in: query
+        name: date_to
+        type: string
+      - description: Status
+        in: query
+        name: status
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: response
+          schema:
+            items:
+              $ref: '#/definitions/rip_internal_app_dto.SpeedRequest'
+            type: array
+      security:
+      - BearerAuth: []
+      summary: Get speed requests list
+      tags:
+      - speedrequests
+  /speedrequests/{speed_request_id}:
+    delete:
+      description: Delete speed request. For authentificated users only.
+      parameters:
+      - description: Speed Request ID
+        in: path
+        name: speed_request_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Delete speed request
+      tags:
+      - speedrequests
+    get:
+      description: Get speed request by ID. For authentificated users only. Client
+        can see only their speed requests
+      parameters:
+      - description: Speed Request ID
+        in: path
+        name: speed_request_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: response
+          schema:
+            $ref: '#/definitions/rip_internal_app_dto.SpeedRequestDetailedResponse'
+      security:
+      - BearerAuth: []
+      summary: Get speed request by ID
+      tags:
+      - speedrequests
+    put:
+      description: Update speed request. For authentificated users only.
+      parameters:
+      - description: Speed Request ID
+        in: path
+        name: speed_request_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: request
+          schema:
+            $ref: '#/definitions/rip_internal_app_dto.UpdateSpeedRequest'
+      security:
+      - BearerAuth: []
+      summary: Update speed request
+      tags:
+      - speedrequests
+  /speedrequests/{speed_request_id}/complete:
+    put:
+      consumes:
+      - application/json
+      description: Complete speed requests. For moderators only.
+      parameters:
+      - description: Speed Request ID
+        in: path
+        name: speed_request_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Complete speed request
+      tags:
+      - speedrequests
+  /speedrequests/{speed_request_id}/submit:
+    put:
+      description: Submit speed request. For authentificated users only.
+      parameters:
+      - description: Speed Request ID
+        in: path
+        name: speed_request_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: response
+          schema:
+            $ref: '#/definitions/rip_internal_app_dto.SpeedRequestDetailedResponse'
+      security:
+      - BearerAuth: []
+      summary: Sumbit speed request
+      tags:
+      - speedrequests
+  /speedrequests/draft:
+    get:
+      description: Get darft infomation. Returns speedrequestid nil and count 0 for
+        guest.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get darft information
+      tags:
+      - speedrequests
   /users/me:
     get:
       consumes:
@@ -199,15 +608,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.UserResponse'
+            $ref: '#/definitions/rip_internal_app_dto.UserResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
       security:
       - BearerAuth: []
       summary: Get current user profile
@@ -223,25 +632,32 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/dto.UpdateUserRequest'
+          $ref: '#/definitions/rip_internal_app_dto.UpdateUserRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.MessageResponse'
+            $ref: '#/definitions/rip_internal_app_dto.MessageResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dto.ErrorResponse'
+            $ref: '#/definitions/rip_internal_app_dto.ErrorResponse'
       security:
       - BearerAuth: []
       summary: Update current user
       tags:
       - users
+schemes:
+- http
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
